Push 3: Fixed locators - login and notes pages